--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
 .DS_Store
 node_modules/
-/dist
-.nyc_output/
-coverage/
-package-lock.json
-
-/tests/e2e/videos/
-/tests/e2e/screenshots/
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/test/unit/coverage/
 
 # Editor directories and files
 .idea
@@ -24,9 +13,3 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw*
-
-# functions ignore
-functions/node_modules/
-functions/package-lock.json
-functions/etc
